# learning-CI

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  codeformat.sh
.github/workflows/: code-format.yml  codeql-analysis.yml  linux-x64.yml  windows-x64.yml
include/: Hello.h
src/: Hello.cpp
test/: test_hello.cpp
